--- a/t/repos/manifest-test/create-env-sandbox.yml
+++ b/t/repos/manifest-test/create-env-sandbox.yml
@@ -1,8 +1,7 @@
 kit:
-  subkits:
-  - create-env
-genesis:
-  env: create-env-sandbox
+  name: dev
+  version: latest
+  features: []
 
 params:
   domain: create-env.example.com
